--- a/html5up-editorial/index.html
+++ b/html5up-editorial/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>My Portfolio</strong> by Abbey Elizondo</a>
+									<a href="index.html" class="logo"><strong>My Portfolio</strong></a>
 									<ul class="icons">
 										<li><a href="https://linkedin.com/in/abbeyelizondo" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -69,14 +69,14 @@
 										<article>
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
-												<h3>Quam lorem ipsum</h3>
+												<h3>UX Research</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
-												<h3>Sed magna finibus</h3>
+												<h3>Analytical Thinking</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
 										</article>
@@ -86,7 +86,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ipsum sed dolor</h2>
+										<h2>Recent Projects</h2>
 									</header>
 									<div class="posts">
 										<article>
