--- a/html5up-editorial/index.html
+++ b/html5up-editorial/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src="https://kit.fontawesome.com/ec44be0bb4.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 
@@ -34,7 +35,7 @@
 									<div class="content">
 										<header>
 											<h1>Hi, I'm Abbey Elizondo<br /> </h1>
-											<p>A copywriter and marketer</p>
+											<p>Copywriter and Marketer</p>
 										</header>
 										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
 										<ul class="actions">
@@ -54,6 +55,7 @@
 									<div class="features">
 										<article>
 											<span class="icon fa-gem"></span>
+											<span class="fa-solid fa-pen"></span>
 											<div class="content">
 												<h3>Creative Copywriting</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
