--- a/html5up-editorial/index.html
+++ b/html5up-editorial/index.html
@@ -54,32 +54,35 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-gem"></span>
-											<span class="fa-solid fa-pen"></span>
+											<span class="icon solid fa-pen"></span>
 											<div class="content">
 												<h3>Creative Copywriting</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>Lanuage is my passion, from social media to long-form content to website design,
+												writing is crucial to all aspects of an organization.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-plane"></span>
+											<span class="icon solid fa-network-wired"></span>
 											<div class="content">
 												<h3>Digital Marketing</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>Analytical thinking with a creative mind, I use digital marketing tools to 
+												help organizations close gaps in all digital aspects.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
 												<h3>UX Research</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>Understanding how people use technology reveals how to optimize content for consumers.
+												I can provide insight on how to optimize content and websites.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
 												<h3>Analytical Thinking</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>With access to specific data, I can make informed decisions tailored to an organization's
+												needs rather than broad campaigns that don't fit the right goals.</p>
 											</div>
 										</article>
 									</div>
