--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="oxford.html" class="image"><img src="images/uptown.jpg" alt="" /></a>
+											<h3>2,103,840 Minutes in Oxford</h3>
+											<p>I remember the first time I set foot in Oxford, on a campus tour of Miami University. 
+												I was a sophomore in high school, the only one in the auditorium room full of juniors and seniors 
+												ready to move into the next phase of their lives.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
@@ -173,9 +175,9 @@
 												<li><a href="#">Opinion Writing</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
+										<li><a href="#">Research</a></li>
+										<li><a href="#">Digital Marketing</a></li>
+										<!--<li>
 											<span class="opener">Another Submenu</span>
 											<ul>
 												<li><a href="#">Lorem Dolor</a></li>
@@ -186,7 +188,7 @@
 										</li>
 										<li><a href="#">Maximus Erat</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="#">Amet Lacinia</a></li>-->
 									</ul>
 								</nav>
 
@@ -221,16 +223,15 @@
 									</header>
 									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="#">elizondoabbey@gmail.com</a></li>
+										<!--<li class="icon solid fa-phone">(000) 000-0000</li>-->
+										<li class="icon solid fa-home">Columbus, Ohio<br /></li>
 									</ul>
 								</section>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; My Profile. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
 						</div>
