--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
 											</ul>
 										</article>
 										<article>
-											<a href="oxford.html" class="image"><img src="images/uptown.jpg" alt="" /></a>
+											<a href="oxford.html" class="image fit"><img src="images/uptown.jpg" alt="" /></a>
 											<h3>2,103,840 Minutes in Oxford</h3>
 											<p>I remember the first time I set foot in Oxford, on a campus tour of Miami University. 
 												I was a sophomore in high school, the only one in the auditorium room full of juniors and seniors 
 												ready to move into the next phase of their lives.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="oxford.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
