--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/headshot square.jpg" alt="Woman with blonde hair, blue-green eyes, and glasses slightly smiling for a profile picture." />
 									</span>
 								</section>
 
