--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 									<div class="posts">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<h3>Marketing Case Study</h3>
+											<p>During a 3-month course, I created a digital marketing strategy for an international toy company.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
